# fastapi-learning

./: .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py  database.py  exception_handlers.py  exceptions.py  logger.py  middleware.py
app/models/: __init__.py  base.py  user.py
app/routes/: __init__.py  auth.py
app/schemas/: __init__.py  auth.py  base.py  user.py
app/services/: __init__.py  user_service.py
migrations/: env.py
migrations/versions/: 7f5a630c9ae6_init_users.py
