[project]
name = "my-fastapi-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmytro Bielousov",email = "xperiaroco@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "fastapi[standard] (>=0.138.1,<0.139.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "datetime (>=6.0,<7.0)",
    "alembic (>=1.18.5,<2.0.0)",
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)",
    "pyright (>=1.1.411,<2.0.0)"
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "standard"
pythonVersion = "3.14"

include = ["app"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv"
]
